# ds-workflows-python

./: .gitignore  README.md  index.qmd  styles.css
materials/: pyproject.toml
materials/activities/: 01-reading-data.ipynb  02-data-exploration-and-validation.ipynb  03-modelling.ipynb  04-model-monitoring.ipynb  04-shiny-app.ipynb  05-python-package.ipynb
materials/activities/01-reading-data/: notebook.ipynb  requirements.txt
materials/activities/02-data-exploration-and-validation/: notebook.ipynb  requirements.txt
materials/activities/03-model-training/: notebook.ipynb  requirements.txt
materials/activities/04-model-monitoring/: notebook.ipynb  requirements.txt
materials/activities/05-shiny-app/: app.py  notebook.ipynb  requirements.txt
materials/backup-api/: README.md  requirements.txt
materials/backup-api/scritps/: update-db.ipynb
materials/backup-api/src/: app.py
materials/chidata/: justfile
materials/chidata/tests/: test_data.py
materials/connect-content/etl/: 02-data-validation.ipynb  notebook.ipynb  requirements.txt
materials/example/: README.md  test.ipynb
materials/example/00-etl-with-python-package/: notebook.ipynb
materials/example/01-etl-raw-data/: justfile  notebook.ipynb  requirements.txt
materials/example/02-etl-data-validation/: data-profile-business-license.ipynb  data-profile-food-inspection.ipynb  notebook.ipynb
materials/slides/: 01-reading-data.ipynb  02-data-exploration-and-validation.ipynb  02-data-exploration.ipynb  requirements.txt
materials/solutions/: README.md
materials/src/: 01-update-data.ipynb
(+56 files in other folders)
