[tool.poetry]
name = "chidata"
version = "0.1.0"
description = ""
authors = ["SamEdwardes <sam.edwardes@posit.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandas = "^2.0.2"
httpx = "^0.24.1"
rich = "^13.4.1"
pandera = "^0.15.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
